--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/tu_base_de_datos
+spring.datasource.url=jdbc:mysql://localhost:3308/almacen
 spring.datasource.username=usuario
 spring.datasource.password=secreto
 spring.jpa.hibernate.ddl-auto=update
